# openssl-evp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/hash/: hash.h
src/: hash.cpp
